--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./style.css" media="screen" />
     <title>Porfolio</title>
 </head>
+
 <body>
-    
+    <!-- NavBar -->
+
+    <div class="container">
+        <div class="nav-right">Ameya's Porfolio</div>
+        <div class="items">
+            <div class="item">Home</div>
+            <div class="item"><a href="/blogs.html">Blog</a></div>
+            <div class="item"><a href="/projects.html">Projects</a></div>
+        </div>
+    </div>
+    </div>
+    </div>
+    <div class="baner">
+        <div class="baner-img"><img class="img-1" src="./assets/image.jpg" /></div>
+        <div class="intro">Hi , I am <span style="color: #A66CFF;">Ameya Joshi</span> . I write code using modern
+            technologies to make amazing websites . In my free time I watch movies and play badminton.</div>
+    </div>
+    <footer>
+        <div class="footer-container">
+            <div class="social"><a href="https://github.com/ameyamjoshi" target="_blank">Github</a></div>
+            <div class="social"><a href="https://www.linkedin.com/in/ameya-joshi19/" target="_blank">LinkedIn</a></div>
+            <div class="social"><a href="https://twitter.com/AmeyaJoshi16" target="_blank">Twitter</a></div>
+        </div>
+    </footer>
 </body>
+
 </html>
